--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Zhiyuan Su 苏智渊"
-description              : "\"Everything that rises must converge.\""
+title                    : "Liwei Hou 侯力玮"
+description              : "\"Founder of Airon Tech Corp. and Ph.D. in Robotics.\""
 repository               : "zhiyuansu0326/zhiyuansu0326.github.io"
 google_scholar_stats_use_cdn : true
 
@@ -21,10 +21,10 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Zhiyuan Su 苏智渊"
+  name             : "Liwei Hou 侯力玮"
   avatar           : "images/szy1.png"
-  bio              : "Gaoling School of Artificial Intelligence, Renmin University of China"
-  location         : "Beijing, China"
+  bio              : "Founder of Airon Tech Corp."
+  location         : "Changsha, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=5T0sVTgAAAAJ&hl"
