--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Liwei Hou 侯力玮"
-description              : "\"Founder of Airon Tech Corp. and Ph.D. in Robotics.\""
+description              : "\"Bring AI to the ground, boost social efficiency, and benefit humanity.\""
 repository               : "zhiyuansu0326/zhiyuansu0326.github.io"
 google_scholar_stats_use_cdn : true
 
@@ -23,12 +23,12 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Liwei Hou 侯力玮"
   avatar           : "images/szy1.png"
-  bio              : "Founder of Airon Tech Corp."
+  bio              : "Founder of Airon Tech Corp. and Ph.D. in Robotics."
   location         : "Changsha, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=5T0sVTgAAAAJ&hl"
-  email            : "ayinor0713@ruc.edu.cn"
+  email            : "@ruc.edu.cn"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
