--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ author:
   avatar           : "images/airon.png"
   bio              : "Founder of Airon Tech Corp. and Ph.D. in Robotics."
   location         : "Changsha, China"
-  employer         :
+  Phone            : "+8619108475991"
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=5T0sVTgAAAAJ&hl"
-  email            : "@ruc.edu.cn"
+  googlescholar    : 
+  email            : "lwhou1992@gmail.com"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :  
   bitbucket        :
