--- a/_config.yml
+++ b/_config.yml
@@ -25,22 +25,21 @@ author:
   avatar           : "images/airon.png"
   bio              : "Founder of Airon Tech Corp. and Ph.D. in Robotics."
   location         : "Changsha, China"
-  Phone            : "+8619108475991"
-  pubmed           : 
+  pubmed           : "+8619108475991"
   googlescholar    : 
   email            : "lwhou1992@gmail.com"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :  
   bitbucket        :
-  codepen          :
-  dribbble         :
-  flickr           :
+  codepen          : "+8619108475991"
+  dribbble         : "+8619108475991"
+  flickr           : "+8619108475991"
   facebook         :
   foursquare       :
   github           : 
   google_plus      :
-  keybase          :
-  instagram        :
+  keybase          : "+8619108475991"
+  instagram        : "+8619108475991"
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : # e.g., "linkedin username"
