--- a/_config.yml
+++ b/_config.yml
@@ -25,21 +25,21 @@ author:
   avatar           : "images/airon.png"
   bio              : "Founder of Airon Tech Corp. and Ph.D. in Robotics."
   location         : "Changsha, China"
-  pubmed           : "+8619108475991"
+  pubmed           : 
   googlescholar    : 
   email            : "lwhou1992@gmail.com"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :  
   bitbucket        :
-  codepen          : "+8619108475991"
-  dribbble         : "+8619108475991"
-  flickr           : "+8619108475991"
+  codepen          : 
+  dribbble         : 
+  flickr           :
   facebook         :
   foursquare       :
   github           : 
   google_plus      :
-  keybase          : "+8619108475991"
-  instagram        : "+8619108475991"
+  keybase          :
+  instagram        :
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : # e.g., "linkedin username"
