--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ author:
   bio              : "Founder of Airon Tech Corp. and Ph.D. in Robotics."
   location         : "Changsha, China"
   pubmed           : 
+  phone            : "+86 19108475991"
   googlescholar    : 
   email            : "lwhou1992@gmail.com"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
