--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,26 +3,20 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
+  - title: "Experiences"
+    url: "/#-work-experiences"
+    
+  - title: "Airon"
+    url: "/#-about-airon"
+    
   - title: "News"
     url: "/#-news"
 
-  - title: "Publications"
-    url: "/#-publications"
+  - title: "Projects"
+    url: "/#-selected-projects"
 
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
-
-  - title: "Educations"
-    url: "/#-educations"
-
-  - title: "Work Experiences"
-    url: "/#-work-experiences"
-
-  - title: "Services"
-    url: "/#-services"
-
-  - title: "Beyond Academics"
-    url: "/#-beyond-academics"
 
   - title: "Visitor Map"
     url: "/#-visitor-map"
